--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#8357c5">
+    <meta name="Description" content="An app that will help you to decide what to do!">
     <title>Indecision app</title>
     <link rel='icon' type='png/image' href='/favicon.png'>
+    <link rel="manifest" href="/manifest.json">
 
 </head>
 
 <body>
     <div id="app"></div>
     <script src="./bundle.js"></script>
+    <noscript>Please enable javascript to run this app!</noscript>
+    <script>
+if('serviceWorker' in navigator) {
+  navigator.serviceWorker
+           .register('/sw.js')
+           .then(function() { console.log("Service Worker Registered"); });
+}
+</script>
 
 </body>
 
