--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script async src="./bundle.js"></script>
     <noscript>Please enable javascript to run this app!</noscript>
     <script>
 if('serviceWorker' in navigator) {
