--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="Description" content="An app that will help you to decide what to do!">
     <title>Indecision app</title>
     <link rel='icon' type='png/image' href='/favicon.png'>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.JSON">
 
 </head>
 
